--- a/leonardo.css
+++ b/leonardo.css
@@ -1,53 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bebas+Neue&family=Bitter:ital,wght@0,100..900;1,100..900&family=Caveat:wght@400..700&family=Great+Vibes&family=Kalam:wght@300;400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Pacifico&family=Quicksand:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
   outline: none;
   cursor: pointer;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 :root {
   --primary-1: #ff4500;
-  --primary-2: #631c02;
-  --white: #efefef;
-  --white-pure: #fff;
   --black: #111;
   --black-pure: #000;
   --light-1: beige;
-  --light-2: khaki;
-  --grey-1: #222; 
+  --light-2: khaki; 
   --grey-2: #333;
-  --grey-3: #565656;
-  --grey-4: #787878;
-  --grey-5: #9a9a9a;
-  --grey-6: #ababab;
   --grey-7: #ccc;
-  --grey-8: #ddd;
   --grey-9: #eee;
   --red-1: darkred;
-  --red-2: red;
-  --orange-1: darkorange;
-  --orange-2: orange;
-  --yellow-1: darkgoldenrod;
   --yellow-2: goldenrod;
   --yellow-3: gold;
-  --yellow-4: yellow;
-  --yellow-5: #fcfc9f;
-  --green-1: darkgreen;
-  --green-2: green;
-  --green-3: lightgreen;
-  --blue-1: darkblue;
-  --blue-2: blue;
-  --blue-3: lightblue;
   --sky-blue: skyblue;
-  --cyan-1: cyan;
-  --cyan-2: darkcyan;
-  --teal: teal;
-  --sienna: sienna;
 
   --border-r-1: 8px;
   --border-r-2: 6px;
@@ -56,28 +32,6 @@
   --box-shad-1: rgba(0, 0, 0, 0.9);
   --box-shad-2: rgba(0, 0, 0, 0.6);
   --box-shad-3: rgba(0, 0, 0, 0.3);
-
-  --font-sans: 'Mulish', sans-serif;
-  --font-sans-2: 'Montserrat', sans-serif;
-  --font-sans-condensed: 'Roboto Condensed', sans-serif;
-  --font-sans-heading: 'Bebas Neue', sans-serif; 
-  --font-serif: 'Bitter', serif;
-  --font-mono: 'Ubuntu Sans Mono', monospace;
-  --font-cursive: 'Caveat', cursive; 
-
-  --h1-size: 50px;
-  --h2-size: 42px;
-  --h3-size: 34px;
-  --h4-size: 28px;
-  --h5-size: 24px;
-  --h6-size: 20px;
-  
-  --btn-1-size: 32px;
-  --btn-2-size: 28px;
-  --btn-3-size: 24px;
-  --btn-4-size: 22px;
-  --btn-5-size: 20px;
-  --btn-6-size: 18px;
 
   --padding-xl: 9px 18px;
   --padding-l: 7px 14px;
@@ -88,15 +42,22 @@
   --margin-l: 10px;
   --margin-m: 7px;
   --margin-s: 4px;
-}
 
-body {
-  width: 100vh;
-  height: 100vh;
-  font-family: var(--font-sans);  
-  color: var(--yellow-3);
-  background-color: var(--red-1);
-  text-align: center;
+  --font-sans: 'Mulish', sans-serif;
+
+  --h1-size: 34px;
+  --h2-size: 30px;
+  --h3-size: 26px;
+  --h4-size: 22px;
+  --h5-size: 20px;
+  --h6-size: 18px;
+  
+  --btn-1-size: 28px;
+  --btn-2-size: 26px;
+  --btn-3-size: 24px;
+  --btn-4-size: 22px;
+  --btn-5-size: 20px;
+  --btn-6-size: 18px;
 }
 
 .center {
@@ -252,3 +213,133 @@ h1, h2, h3, h4, h5, h6,
   opacity: 0.85;
 }
 
+body {
+  width: 100%;
+  height: 100vh;
+  font-family: var(--font-sans);  
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.7)),
+    url('./images/bg.jpg') no-repeat center;
+  background-size: cover;
+}
+
+h1 {
+  color: var(--primary-1);
+  padding: 20px;
+  background: var(--black);
+  text-align: center;
+  width: 350px;
+  margin: 20px auto 10px;
+  user-select: none;
+  border-radius: var(--border-r-3);
+  border: 1px solid var(--primary-1);
+  box-shadow: var(--box-shad-1);
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: var(--primary-1);
+}
+
+.item {
+  background: var(--black);
+}
+
+a {
+  font-size: 20px;
+  font-weight: 700; 
+}
+
+a:link,
+a:visited {
+  color: var(--black-pure);
+}
+
+a:hover,
+a:active {
+  color: var(--yellow-3);
+}
+
+.fa-times {
+  float: right;
+  z-index: 2;
+}
+
+.name {
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.name-img {
+  height: 20px;
+  width: 20px;
+  vertical-align: sub;
+  margin-right: 5px;
+}
+
+.modal-container {
+  background: var(--black);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.modal {
+  background: var(--black);
+  box-shadow: var(--box-shad-1);
+  max-width: 95%;
+  width: 500px;
+  border-radius: var(--border-r-3);
+  border: 1px solid var(--primary-1);
+  animation: modalopen 1s ease-in;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.close-icon {
+  float: right;
+  color: var(--primary-1);
+  font-size: 24px;
+  position: relative;
+  top: 13px;
+  right: 13px;
+}
+
+.modal-header {
+  background: var(--primary-1);
+  color: var(--black);
+  padding: 15px;
+}
+
+h3 {
+  margin: 0;
+  color: orangered;
+}
+
+.form-input {
+  width: 97%;
+  padding: var(--padding-m);
+  border: 1px solid var(--primary-1);
+  border-radius: var(--border-r-3);
+  display: block;
+  background-color: transparent;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+}
