--- a/leonardo.css
+++ b/leonardo.css
@@ -60,12 +60,6 @@ html {
   --btn-6-size: 18px;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 h1 {
   font-size: var(--h1-size);
 }
@@ -241,7 +235,6 @@ h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  color: var(--primary-1);
 }
 
 .item {
@@ -263,10 +256,10 @@ a:active {
   color: var(--yellow-3);
 }
 
-.fa-times {
+/* .fa-times {
   float: right;
-  z-index: 2;
-}
+  /* z-index: 2; */
+} */
 
 .name {
   margin-top: 20px;
@@ -290,11 +283,18 @@ a:active {
   right: 0;
 }
 
+.show-modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal {
+  color: var(--primary-1);
   background: var(--black);
   box-shadow: var(--box-shad-1);
   max-width: 95%;
-  width: 500px;
+  width: 400px;
   border-radius: var(--border-r-3);
   border: 1px solid var(--primary-1);
   animation: modalopen 1s ease-in;
@@ -311,7 +311,10 @@ a:active {
 
 .close-icon {
   float: right;
+  background-color: var(--black);
   color: var(--primary-1);
+  padding: 5px;
+  border-radius: 50%;
   font-size: 24px;
   position: relative;
   top: 13px;
@@ -321,16 +324,18 @@ a:active {
 .modal-header {
   background: var(--primary-1);
   color: var(--black);
-  padding: 15px;
+  padding: var(--padding-xl);
+  margin-bottom: 20px;
 }
 
-h3 {
-  margin: 0;
-  color: orangered;
+.form-label {
+  padding: var(--padding-m);
 }
 
 .form-input {
-  width: 97%;
+  color: var(--primary-1);
+  width: 90%;
+  margin: 10px;
   padding: var(--padding-m);
   border: 1px solid var(--primary-1);
   border-radius: var(--border-r-3);
