--- a/leonardo.css
+++ b/leonardo.css
@@ -237,13 +237,25 @@ h1 {
   flex-wrap: wrap;
 }
 
+.bookmarks-container {
+  background: black;
+}
+
 .item {
-  background: var(--black);
+  width: 250px;
+  margin: 5px;
+  padding: 5px;
+  background: orangered;
+  border-radius: var(--border-r-3);
+  border: 1px solid var(--black);
+  box-shadow: var(--box-shad-1);
 }
 
 a {
   font-size: 20px;
-  font-weight: 700; 
+  font-weight: 700;
+   
+  
 }
 
 a:link,
@@ -256,21 +268,18 @@ a:active {
   color: var(--yellow-3);
 }
 
-/* .fa-times {
-  float: right;
-  /* z-index: 2; */
-} */
-
 .name {
-  margin-top: 20px;
-  margin-right: 20px;
+  margin: 10px;
 }
 
-.name-img {
+.name img {
   height: 20px;
   width: 20px;
   vertical-align: sub;
-  margin-right: 5px;
+  padding: 15px;
+  margin-right: 15px;
+  background-color: var(--black);
+  border-radius: 50%;
 }
 
 .modal-container {
